--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ dependencies {
     groovy 'org.codehaus.groovy:groovy-all:1.8.5'
 
     compile 'javax.servlet:servlet-api:2.5',
-            'org.slf4j:slf4j-api:1.6.4'
+            'log4j:log4j:1.2.16'
 
     testCompile 'org.spockframework:spock-core:0.5-groovy-1.8',
                 'org.gmock:gmock:0.8.2',
