--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'groovy'
 apply plugin: 'maven'
+apply plugin: 'idea'
 
 group = 'net.xelnaga'
 artifactId = 'http-imposter'
@@ -16,14 +17,16 @@ repositories {
 
 dependencies {
     
-    groovy 'org.codehaus.groovy:groovy-all:1.8.5'
+    groovy 'org.codehaus.groovy:groovy-all:1.7.8'
 
     compile 'javax.servlet:servlet-api:2.5',
             'log4j:log4j:1.2.16',
-            'commons-codec:commons-codec:1.6'
+            "com.google.code.gson:gson:2.0",
+            'commons-codec:commons-codec:1.6',
+            'commons-lang:commons-lang:2.3'
 
-    testCompile 'org.spockframework:spock-core:0.5-groovy-1.8',
-                'org.gmock:gmock:0.8.2',
+    testCompile 'org.spockframework:spock-core:0.5-groovy-1.7',
+                'org.gmock:gmock:0.8.0',
                 'org.springframework:spring-core:3.1.0.RELEASE',
                 'org.springframework:spring-test:3.1.0.RELEASE',
                 'junit:junit:4.10'
