--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,15 @@ apply plugin: 'groovy'
 apply plugin: 'maven'
 apply plugin: 'idea'
 
-group = 'net.xelnaga'
-artifactId = 'http-imposter'
-version = "1.0.${new Date().format('yyMMdd.HHmm')}"
-
 sourceCompatibility = 1.6
 targetCompatibility = 1.6
+
+group = 'net.xelnaga'
+version = "1.0.${new Date().format('yyMMdd.HHmm')}"
+
+ext {
+    artifactId = 'http-imposter'
+}
 
 repositories {
 
@@ -17,7 +20,7 @@ repositories {
 
 dependencies {
     
-    groovy 'org.codehaus.groovy:groovy-all:1.7.10'
+    groovy 'org.codehaus.groovy:groovy-all:1.8.6'
 
     compile 'javax.servlet:servlet-api:2.5',
             'log4j:log4j:1.2.16',
@@ -25,11 +28,12 @@ dependencies {
             'commons-codec:commons-codec:1.6',
             'commons-lang:commons-lang:2.6'
 
-    testCompile 'org.spockframework:spock-core:0.5-groovy-1.7',
-                'org.gmock:gmock:0.8.1',
+    testCompile 'org.spockframework:spock-core:0.6-groovy-1.8',
                 'org.springframework:spring-core:3.1.0.RELEASE',
                 'org.springframework:spring-test:3.1.0.RELEASE',
-                'junit:junit:4.10'
+                'junit:junit:4.10',
+                'cglib:cglib-nodep:2.2.2',
+                'org.objenesis:objenesis:1.2'
 }
 
 uploadArchives {
